--- a/index.html
+++ b/index.html
@@ -703,12 +703,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 0.3rem;
+            gap: 0.2rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             position: relative;
             text-align: center;
-            padding: 0.5rem;
-            overflow: hidden;
+            padding: 0.75rem;
         }
 
         .location-card:hover {
@@ -718,8 +717,9 @@
         }
 
         .location-icon {
-            font-size: 2rem;
+            font-size: 1.75rem;
             line-height: 1;
+            flex-shrink: 0;
         }
 
         .location-info {
@@ -727,15 +727,18 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            width: 100%;
+            padding: 0 0.25rem;
         }
 
         .location-info h4 {
             color: var(--cream);
-            font-size: 0.75rem;
-            margin-bottom: 0;
-            white-space: nowrap;
+            font-size: 0.6rem;
+            margin: 0;
             text-align: center;
-            line-height: 1.2;
+            line-height: 1.3;
+            word-wrap: break-word;
+            max-width: 100%;
         }
 
         .location-info p {
