Use lotus emoji for Gujarat India

--- a/index.html
+++ b/index.html
@@ -1191,11 +1191,7 @@
             <div class="locations-list">
                 <div class="location-item">
                     <div class="location-card">
-                        <span class="location-icon">
-                            <svg viewBox="0 0 100 120" width="28" height="34" fill="var(--cream)">
-                                <path d="M75 5 L80 8 L82 15 L78 22 L82 28 L85 35 L90 42 L92 50 L88 58 L85 65 L80 72 L75 78 L70 85 L65 92 L58 98 L50 105 L45 110 L40 108 L35 100 L30 95 L25 88 L20 80 L18 72 L22 65 L25 58 L20 52 L15 45 L12 38 L15 30 L20 25 L28 20 L35 15 L42 12 L50 8 L58 5 L65 3 L75 5 Z"/>
-                            </svg>
-                        </span>
+                        <span class="location-icon">🪷</span>
                         <div class="location-info">
                             <h4>Gujarat, India</h4>
                         </div>
