Add mountain emoji for Seattle

--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
                 <span class="journey-arrow">→</span>
                 <div class="location-item">
                     <div class="location-card">
-                        <span class="location-icon">☕</span>
+                        <span class="location-icon">🏔️</span>
                         <div class="location-info">
                             <h4>Seattle, Washington</h4>
                         </div>
