Simplify places section title to My Journey

--- a/index.html
+++ b/index.html
@@ -1184,8 +1184,7 @@
     <section id="places" class="section">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Places I've Called Home</h2>
-                <p class="section-subtitle">My journey across the map</p>
+                <h2 class="section-title">My Journey</h2>
             </div>
             
             <div class="locations-list">
