--- a/index.html
+++ b/index.html
@@ -1144,6 +1144,8 @@
                 <h1 class="nav-brand animate-float">Ruxi</h1>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
+                    <li><a href="#places">My Journey</a></li>
+                    <li><a href="#career">Career</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#links">Links</a></li>
@@ -1156,6 +1158,8 @@
             </div>
             <div id="mobile-menu" class="mobile-menu">
                 <a href="#home">Home</a>
+                <a href="#places">My Journey</a>
+                <a href="#career">Career</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#blog">Blog</a>
                 <a href="#links">Links</a>
