Use HTML entity for London tea cup

--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                 <span class="journey-arrow">→</span>
                 <div class="location-item">
                     <div class="location-card">
-                        <span class="location-icon">☕</span>
+                        <span class="location-icon">&#9749;</span>
                         <div class="location-info">
                             <h4>London, UK</h4>
                         </div>
